Created unit tests for PatientServiceImpl.java and exception handling